change a href of index.html

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
             <ul class="nav">
                 <li class="active"><a href="/">خانه</a></li>
-                <li><a href="/">گزارشات</a></li>
+                <li><a href="/pages/status.html">گزارشات</a></li>
                 <li><a href="/">درباره ما</a></li>
             </ul>
 
@@ -81,7 +81,7 @@
 
                     <ul>
                         <li class="active"><a href="/">صفحه اصلی</a></li>
-                        <li><a href="/">گزارشات</a></li>
+                        <li><a href="/pages/status.html">گزارشات</a></li>
                         <li><a href="/"> درباره ما</a></li>
                     </ul>
                 </div>
