--- a/pages/corona.html
+++ b/pages/corona.html
@@ -1,158 +1,198 @@
 <!DOCTYPE html>
 <html lang="fa">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="theme-color" content="#66BB6A">
+    <meta name="robots" content="index, follow">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>کویدو | سلامتی و اطلاع رسانی</title>
-    <link href="assets/css/corona.css" rel="stylesheet"/>
-    <script src="assets/js/nprogress.js"></script>
+    <title>کروناویروس | کویدو - سامانه آگاه سازی و سلامتی</title>
+    <meta name="keywords" content="کویدو, کرونا, کروناویروس, سامانه, اطلاع رسانی">
+    <meta name="description"
+        content="سامانه اطلاع رسانی و آگاه سازی در زمینه کروناویروس ها و سایر همه گیری ها و بیماری ها">
+    <meta property="og:title" content="کروناویروس | کویدو - سامانه آگاه سازی و سلامتی">
+    <meta property="og:description"
+        content="سامانه اطلاع رسانی و آگاه سازی در زمینه کروناویروس ها و سایر همه گیری ها و بیماری ها">
+    <meta property="og:image" content="https://covido.info/covido.png">
+    <link rel="stylesheet" href="../css/app.css">
+    <link rel="stylesheet" href="../css/nprogress.css">
+    <link rel="stylesheet" href="../css/components/corona.css">
+    <link rel="stylesheet" href="../css/components/header.css">
+    <script src="../js/nprogress.js"></script>
 </head>
+
 <body>
 
-<script>
-    NProgress.start();
-</script>
+    <script>
+        NProgress.start();
+    </script>
 
-<div class="splash-screen">
-    <img src="./assets/image/splash-icon.svg"/>
-    <p>
-        شکیبا باشید
-    </p>
-</div>
+    <header class="main-header">
+        <nav class="top-nav">
 
-<header class="main-header">
-    <nav class="top-nav">
-
-        <div class="hamburger-menu">
-            <input type="checkbox" class="menuBar" id="menuBar" style="display: none;"/>
-            <label class="menuBarButton" for="menuBar">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M20.577 14.8078H2.8077C2.36185 14.8078 2 14.446 2 14.0001C2 13.5543 2.36185 13.1924 2.8077 13.1924H20.577C21.0229 13.1924 21.3847 13.5543 21.3847 14.0001C21.3847 14.446 21.0229 14.8078 20.577 14.8078Z"
-                          fill="black"/>
-                    <path d="M20.577 8.61539H2.8077C2.36185 8.61539 2 8.25355 2 7.8077C2 7.36185 2.36185 7 2.8077 7H20.577C21.0229 7 21.3847 7.36185 21.3847 7.8077C21.3847 8.25355 21.0229 8.61539 20.577 8.61539Z"
-                          fill="black"/>
-                    <path d="M20.577 21H2.8077C2.36185 21 2 20.6382 2 20.1923C2 19.7465 2.36185 19.3846 2.8077 19.3846H20.577C21.0229 19.3846 21.3847 19.7465 21.3847 20.1923C21.3847 20.6382 21.0229 21 20.577 21Z"
-                          fill="black"/>
-                </svg>
-            </label>
-        </div>
-
-        <div class="logo">
-            <a href="/">
-                کــویـــــــدو
-            </a>
-        </div>
-
-        <ul class="nav">
-            <li class="active"><a href="/">خانه</a></li>
-            <li><a href="/">گزارشات</a></li>
-            <li><a href="/">درباره ما</a></li>
-        </ul>
-
-        <div class="buttons">
-            <a class="button" href="/">
-                حمایت از کویدو
-            </a>
-
-            <a class="settings" href="/">
-                <img src="./assets/image/settings.svg"/>
-            </a>
-        </div>
-
-        <div class="drawer">
-            <div class="header">
-                <img src="./assets/image/navbar-icon.svg" alt="Covido"/>
-                <div class="close"></div>
+            <div class="hamburger-menu">
+                <input type="checkbox" class="menuBar" id="menuBar" style="display: none;" />
+                <label class="menuBarButton" for="menuBar">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M20.577 14.8078H2.8077C2.36185 14.8078 2 14.446 2 14.0001C2 13.5543 2.36185 13.1924 2.8077 13.1924H20.577C21.0229 13.1924 21.3847 13.5543 21.3847 14.0001C21.3847 14.446 21.0229 14.8078 20.577 14.8078Z"
+                            fill="black" />
+                        <path
+                            d="M20.577 8.61539H2.8077C2.36185 8.61539 2 8.25355 2 7.8077C2 7.36185 2.36185 7 2.8077 7H20.577C21.0229 7 21.3847 7.36185 21.3847 7.8077C21.3847 8.25355 21.0229 8.61539 20.577 8.61539Z"
+                            fill="black" />
+                        <path
+                            d="M20.577 21H2.8077C2.36185 21 2 20.6382 2 20.1923C2 19.7465 2.36185 19.3846 2.8077 19.3846H20.577C21.0229 19.3846 21.3847 19.7465 21.3847 20.1923C21.3847 20.6382 21.0229 21 20.577 21Z"
+                            fill="black" />
+                    </svg>
+                </label>
             </div>
-            <div class="content">
-                <h6>فهرست</h6>
+
+            <div class="logo">
+                <a href="/">
+                    کــویـــــــدو
+                </a>
+            </div>
+
+            <ul class="nav">
+                <li class="active"><a href="/">خانه</a></li>
+                <li><a href="/pages/status.html">گزارشات</a></li>
+                <li><a href="/">درباره ما</a></li>
+            </ul>
+
+            <div class="buttons">
+                <a class="button" href="/">
+                    حمایت از کویدو
+                </a>
+
+                <a class="settings" href="/">
+                    <img src="../assets/image/Telegram.svg" />
+                </a>
+            </div>
+
+            <div class="drawer">
+                <div class="header">
+                    <img src="../assets/image/navbar-icon.svg" alt="Covido" />
+                    <div class="close"></div>
+                </div>
+                <div class="content">
+                    <h6>فهرست</h6>
 
                     <ul>
                         <li class="active"><a href="/">صفحه اصلی</a></li>
-                        <li><a href="/">گزارشات</a></li>
+                        <li><a href="/pages/status.html">گزارشات</a></li>
                         <li><a href="/"> درباره ما</a></li>
                     </ul>
-            </div>
-        </div>
-
-        <div class="overlay">
-
-        </div>
-
-    </nav>
-</header>
-
-<main>
-    <section class="corona-container">
-        <div class="container">
-            <div class="title-bar">
-                <span><a href="/">بازگشت</a></span>
-                <h2>کروناویروس</h2>
-            </div>
-            <div class="content">
-                <div class="cards">
-                    <div style="display: none; visibility: hidden; transform: translateX(-30%);" class="card">
-                        <h5>معرفی</h5>
-                        <h3>کروناویروس</h3>
-                        <div class="virus-picture">
-                            <img src="assets/image/cv-01.png" alt="Corona"/>
-                        </div>
-                        <div class="information">
-                            <h1>سارس ویروس</h1>
-                            <p>کیوت بامزه اما خطرناک در حد نابودی</p>
-                        </div>
-                        <a href="#">
-                            مطالعه
-                        </a>
-                    </div>
-                    <div class="card">
-                        <h5>معرفی</h5>
-                        <h3>کروناویروس</h3>
-                        <div class="virus-picture">
-                            <img src="assets/image/cv-01.png" alt="Corona"/>
-                        </div>
-                        <div class="information">
-                            <h1>سارس ویروس</h1>
-                            <p>کیوت بامزه اما خطرناک در حد نابودی</p>
-                        </div>
-                        <a href="#">
-                            مطالعه
-                        </a>
-                    </div>
-                    <div style="display: none; visibility: hidden; transform: translateX(-30%);" class="card">
-                        <h5>معرفی</h5>
-                        <h3>کروناویروس</h3>
-                        <div class="virus-picture">
-                            <img src="assets/image/cv-01.png" alt="Corona"/>
-                        </div>
-                        <div class="information">
-                            <h1>سارس ویروس</h1>
-                            <p>کیوت بامزه اما خطرناک در حد نابودی</p>
-                        </div>
-                        <a href="#">
-                            مطالعه
-                        </a>
-                    </div>
-                </div>
-                <div class="slider-btn">
-                    <div class="btn next-btn">
-                        <i class="icon-arrow"></i>
-                    </div>
-                    <div class="btn prev-btn">
-                        <i class="icon-arrow"></i>
-                    </div>
-                </div>
-                <div class="indicators">
-                    <div class="indicator"></div>
-                    <div class="indicator active"></div>
-                    <div class="indicator"></div>
                 </div>
             </div>
-        </div>
-    </section>
-</main>
-<script src="assets/js/app.js"></script>
-<script src="assets/js/cards.js"></script>
+
+            <div class="overlay">
+
+            </div>
+
+        </nav>
+    </header>
+
+    <main>
+        <section class="corona-container">
+            <div class="container">
+                <div class="title-bar">
+                    <span><a href="/">بازگشت</a></span>
+                    <h2>کروناویروس</h2>
+                </div>
+                <div class="content">
+                    <div class="cards">
+                        <div class="card">
+                            <h5>معرفی</h5>
+                            <h3>کروناویروس</h3>
+                            <div class="virus-picture">
+                                <img src="../assets/image/cv-01.png" alt="Corona" />
+                            </div>
+                            <div class="information">
+                                <h1>سارس ویروس</h1>
+                                <p>کیوت بامزه اما خطرناک در حد نابودی</p>
+                            </div>
+                            <a href="#">
+                                مطالعه
+                            </a>
+                        </div>
+                        <div class="card">
+                            <h5>معرفی</h5>
+                            <h3>کروناویروس</h3>
+                            <div class="virus-picture">
+                                <img src="../assets/image/cv-01.png" alt="Corona" />
+                            </div>
+                            <div class="information">
+                                <h1>سارس ویروس</h1>
+                                <p>کیوت بامزه اما خطرناک در حد نابودی</p>
+                            </div>
+                            <a href="#">
+                                مطالعه
+                            </a>
+                        </div>
+                        <div class="card">
+                            <h5>معرفی</h5>
+                            <h3>کروناویروس</h3>
+                            <div class="virus-picture">
+                                <img src="../assets/image/cv-01.png" alt="Corona" />
+                            </div>
+                            <div class="information">
+                                <h1>سارس ویروس</h1>
+                                <p>کیوت بامزه اما خطرناک در حد نابودی</p>
+                            </div>
+                            <a href="#">
+                                مطالعه
+                            </a>
+                        </div>
+                    </div>
+                    <div class="slider-btn">
+                        <div class="btn next-btn">
+                            <i class="icon-arrow"></i>
+                        </div>
+                        <div class="btn prev-btn">
+                            <i class="icon-arrow"></i>
+                        </div>
+                    </div>
+                    <div class="indicators">
+                        <div class="indicator"></div>
+                        <div class="indicator active"></div>
+                        <div class="indicator"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <script>
+        var cardsCount = document.querySelectorAll('.card').length;
+        var cardRound = (cardsCount / 2).toFixed();
+
+        for (var i = 0; i < cardsCount; i++) {
+            if (i !== cardRound - 1) {
+                var cards = document.querySelectorAll('.card');
+
+                cards[i].style.display = 'none';
+                cards[i].style.visibility = 'hidden';
+            } else {
+                var indicators = document.querySelectorAll('.indicator');
+                indicators[i].classList.add('active');
+            }
+        }
+    </script>
+
+    <!-- Config Jquery & Pjax -->
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/jquery.pjax.js"></script>
+    <!-- End Config Jquery & Pjax -->
+
+    <script src="../js/app.js" async></script>
+    <script src="../js/components/cards.js" async></script>
+    <script src="../js/components/header.js" async></script>
+
+    <script>
+        NProgress.done();
+    </script>
 </body>
+
 </html>
