update article show link

--- a/pages/article.html
+++ b/pages/article.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../css/nprogress.css">
     <link rel="stylesheet" href="../css/components/header.css">
     <link rel="stylesheet" href="../css/components/article.css">
-    <script src="js/nprogress.js"></script>
+    <script src="../js/nprogress.js"></script>
 </head>
 
 <body>
@@ -103,11 +103,11 @@
                 </div>
                 <div class="top-article">
                     <div class="container">
-                        <img src="/assets/image/virus.jpg" loading="lazy" />
+                        <img src="../assets/image/virus.jpg" loading="lazy" />
                         <div class="content">
                             <div class="line"></div>
                             <h1>
-                                <a href="/">
+                                <a href="/pages/post.html">
                                     شناسایی
                                     </br>
                                     گونه جدید کرونا
@@ -119,17 +119,17 @@
                 <div class="articles">
                     <article class="article">
                         <div class="cover">
-                            <img src="/assets/image/virus.jpg" />
+                            <img src="../assets/image/virus.jpg" />
                         </div>
                         <div class="content">
                             <h3>
-                                <a href="#">عنوان مقاله ای در کویدو</a>
+                                <a href="/pages/post.html">عنوان مقاله ای در کویدو</a>
                             </h3>
                             <p>متن متن متن متن متن متن متن متن متن متن متن متن متن متن متن ...</p>
                         </div>
                         <div class="footer">
                             <div class="author">
-                                <img src="/assets/image/author.png" alt="author" />
+                                <img src="../assets/image/author.png" alt="author" />
                                 <h4>کویدو</h4>
                             </div>
                             <p>
@@ -141,17 +141,17 @@
                     </article>
                     <article class="article">
                         <div class="cover">
-                            <img src="/assets/image/virus.jpg" />
+                            <img src="../assets/image/virus.jpg" />
                         </div>
                         <div class="content">
                             <h3>
-                                <a href="#">عنوان مقاله ای در کویدو</a>
+                                <a href="/pages/post.html">عنوان مقاله ای در کویدو</a>
                             </h3>
                             <p>متن متن متن متن متن متن متن متن متن متن متن متن متن متن متن ...</p>
                         </div>
                         <div class="footer">
                             <div class="author">
-                                <img src="/assets/image/author.png" alt="author" />
+                                <img src="../assets/image/author.png" alt="author" />
                                 <h4>کویدو</h4>
                             </div>
                             <p>
@@ -163,17 +163,17 @@
                     </article>
                     <article class="article">
                         <div class="cover">
-                            <img src="/assets/image/virus.jpg" />
+                            <img src="../assets/image/virus.jpg" />
                         </div>
                         <div class="content">
                             <h3>
-                                <a href="#">عنوان مقاله ای در کویدو</a>
+                                <a href="/pages/post.html">عنوان مقاله ای در کویدو</a>
                             </h3>
                             <p>متن متن متن متن متن متن متن متن متن متن متن متن متن متن متن ...</p>
                         </div>
                         <div class="footer">
                             <div class="author">
-                                <img src="/assets/image/author.png" alt="author" />
+                                <img src="../assets/image/author.png" alt="author" />
                                 <h4>کویدو</h4>
                             </div>
                             <p>
