--- a/pages/post.html
+++ b/pages/post.html
@@ -57,7 +57,7 @@
 
             <ul class="nav">
                 <li class="active"><a href="/">خانه</a></li>
-                <li><a href="/">گزارشات</a></li>
+                <li><a href="/pages/status.html">گزارشات</a></li>
                 <li><a href="/">درباره ما</a></li>
             </ul>
 
@@ -67,13 +67,13 @@
                 </a>
 
                 <a class="settings" href="/">
-                    <img src="./assets/image/settings.svg" />
+                    <img src="../assets/image/Telegram.svg" />
                 </a>
             </div>
 
             <div class="drawer">
                 <div class="header">
-                    <img src="./assets/image/navbar-icon.svg" alt="Covido" />
+                    <img src="../assets/image/navbar-icon.svg" alt="Covido" />
                     <div class="close"></div>
                 </div>
                 <div class="content">
@@ -81,7 +81,7 @@
 
                     <ul>
                         <li class="active"><a href="/">صفحه اصلی</a></li>
-                        <li><a href="/">گزارشات</a></li>
+                        <li><a href="/pages/status.html">گزارشات</a></li>
                         <li><a href="/"> درباره ما</a></li>
                     </ul>
                 </div>
